image update fix skills spacing when one cat

--- a/stylesheets/organisms/work-showcase.scss
+++ b/stylesheets/organisms/work-showcase.scss
@@ -67,7 +67,7 @@
 
 		}
 
-		+ .skills { @include rem(margin-bottom, 3rem); }
+		&:last-of-type { @include rem(margin-bottom, 3rem); }
 
 	}
 
